# prestonotes

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  biome.json  conftest.py  main.py  package-lock.json  package.json  pyproject.toml  setEnv.sh  setup_env.sh
.cursor/: mcp.env.example  mcp.env.tpl  mcp.json  task070_ucn_mutations.json
.cursor/agents/: code-tester.md  coder.md  coder.mdc  doc.md  doc.mdc  planner.mdc  qa.mdc  tester.md
.cursor/plans/: e2e_step_sequence_ssot_0a7f1af3.plan.md  e2e_sync_and_agent_run_log_read_plan.md  rca_diff_gate_plan_d80a06c7.plan.md  simple_e2e_completion_rule.plan.md  ucn-lookback-batch-ucn-prep.md  ucn-preflight-dryrun-policy.md
docs/: E2E_TEST_CUSTOMER_GUIDE.md  MIGRATION_GUIDE.md  V2_MVP_BUILD_PLAN.md  design.md  project_spec.md  tasks.md
prestonotes_gdoc/: 000-bootstrap-gdoc-customer-notes.py  README.md  challenge_lifecycle_parity.py  drive-trash-customer.py  e2e_rebaseline_customer_gdoc.py  update-gdoc-customer-notes.py
prestonotes_mcp/: .env.example  __init__.py  __main__.py  call_records.py  config.py  exec_helper.py  journey.py  ledger.py  ledger_v2.py  prestonotes-mcp.yaml.example  runtime.py  security.py  server.py
scripts/: README.md  e2e-test-customer-bump-dates.py  e2e-test-customer-materialize.py  e2e-test-customer.sh  e2e-test-push-gdrive-notes.sh  granola-sync.py  lpi_kb_seed_refresh.py  materialize_licensing_kb_snapshots.py  materialize_wiz_mcp_docs.py  merge_mcp_seed_parts.py  package-lock.json  package.json  package_project.sh  pyproject.toml  restart-google-drive.sh  rsync-gdrive-notes.sh  run-granola-sync.sh  run-granola-sync.zsh  safe-commit.sh  save_mcp_kb_response_to_seed.py  setup_env.sh  spider_wiz_external_pages.py  syncNotesToMarkdown.js  ucn-planner-preflight.py  ucn-prep.py  wiz_cache_manager.py  wiz_doc_cache_manager.py  wiz_docs_client.py  wiz_docs_search_cli.py  wiz_vector_coverage_report.py
tests/: test_pre_commit_config.py  test_ucn_prep.py
wiz-mcp/: .gitignore  README.md  config.local.example.sh  config.sh  diagnose.sh  run-wiz-mcp-for-cursor.sh  setup-cursor.sh  wiz-mcp.env.example  write-wiz-dotenv.sh
(+363 files in other folders)
